tests/success/getting_field_of_nil_record.tig
let
	type person = {name: string, age: int}
	var person: person := nil
in
	print(person.name)
end