tests/fail/wrong_type_in_record.tig
let
    type person = { name: string, age: int }
    var a:= person { name="name", age="name" }
in
end
